# mindtype-main

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker.md  package-lock.json  package.json  pyproject.toml  requirements.txt  trial.ipynb
client/: package-lock.json  package.json
client/src/: App.css  App.jsx  index.css  main.jsx
client/src/components/: CategoryCard.jsx  CategoryFilter.jsx  ChatBot.jsx  Footer.jsx  Header.jsx  Hero.jsx  PostCard.jsx  PostGrid.jsx  ProtectedRoute.jsx  Sidebar.jsx  TrendCard.jsx  WelcomeSection.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: CreatePost.jsx  Dashboard.jsx  EditPost.jsx  Explore.jsx  Home.jsx  Login.jsx  MyPosts.jsx  PostDetail.jsx  Profile.jsx  Register.jsx
client/src/services/: api.js
frontend/: index.html  script.js  styles.css
server/: .gitignore  .gitignore copy  package-lock.json  package.json  server.js
server/config/: database.js
server/middleware/: auth.js
server/models/: Contact.js  Post.js  User.js
server/routes/: auth.js  contact.js  posts.js  users.js
server/scripts/: seed-atlas.js  seed.js
src/social_media_blog/: app.py  chat_models.py  crew.py  db_handler.py  main.py
src/social_media_blog/config/: agents.yaml  tasks.yaml
