[project]
name = "social_media_blog"
version = "0.1.0"
description = "social_media_blog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
social_media_blog = "social_media_blog.main:run"
run_crew = "social_media_blog.main:run"
train = "social_media_blog.main:train"
replay = "social_media_blog.main:replay"
test = "social_media_blog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
